--- a/git/SmartKid/app/src/main/AndroidManifest.xml
+++ b/git/SmartKid/app/src/main/AndroidManifest.xml
@@ -64,7 +64,9 @@
 
         <service
             android:name=".MyMusicService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".SetTimePlay"></activity>
     </application>
 
 </manifest>
