--- a/git/SmartKid/app/src/main/AndroidManifest.xml
+++ b/git/SmartKid/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:icon="@drawable/gau"
         android:label="@string/app_name"
-        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -47,9 +48,6 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".Apply2Activity"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".Arrange2Activity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".VictoryActivity"
